--- a/CSS_advanced/styles/12-style.css
+++ b/CSS_advanced/styles/12-style.css
@@ -62,10 +62,11 @@ a   {
     color: var(--color-primary);
 }
 .section-title{
-    color: var(--color-primary);
     font-family: var(--font-family-title);
-    text-transform: var(--section-tagline-transform);
+    font-size: var(--font-size-xx-large);
     font-weight: var(--font-weight-bold);
+    margin: var(--section-title-margin);
+    color: var(--section-title-color);
 
 }
 .section-tagline{
