--- a/CSS_advanced/styles/25-style.css
+++ b/CSS_advanced/styles/25-style.css
@@ -45,9 +45,9 @@
     --nav-item-margin: 0 0 3rem 0;
     --nav-item-link-hover: var(--color-primary);
 
-    --button-display:inline-block;
-    --button-paddin:1.5rem 3rem;
-    --button-border:0.2rem solid var(--color-primary);
+    --button-display: inline-block;
+    --button-padding: 1.5rem 3rem;
+    --button-border: 0.2rem solid var(--color-primary);
     --button-color: var(--color-black);
     --button-text-decoration: none;
     --button-font-size: var(--font-size-large);
@@ -249,7 +249,7 @@ ul.row {
     text-decoration: none;
 }
 
-.button{
+.button {
     display: var(--button-display);
     padding: var(--button-padding);
     border: var(--button-border);
@@ -258,9 +258,8 @@ ul.row {
     text-decoration: var(--button-text-decoration);
 }
 
-.button:hover{
+.button:hover {
     color: var(--button-hover-color);
     text-decoration: var(--button-hover-text-decoration);
     background-color: var(--button-hover-background);
-
 }
