--- a/CSS_advanced/styles/26-style.css
+++ b/CSS_advanced/styles/26-style.css
@@ -269,3 +269,9 @@ ul.row {
     width: 10rem;
     height: 10rem;
 }
+
+.card-testimonial .card-quote cite{
+    display: block;
+    padding-top: 1rem;
+    color: var(--color-primary);
+}
