--- a/CSS_advanced/styles/26-style.css
+++ b/CSS_advanced/styles/26-style.css
@@ -265,6 +265,10 @@ ul.row {
 }
 
 .card-testimonial{
+    text-align: center;
+}
+
+.card-testimonial .card-avatar{
     border-radius: 50%;
     width: 10rem;
     height: 10rem;
