--- a/CSS_advanced/styles/29-style.css
+++ b/CSS_advanced/styles/29-style.css
@@ -44,6 +44,7 @@
     --nav-item-display: inline-block;
     --nav-item-margin: 0 0 3rem 0;
     --nav-item-link-hover: var(--color-primary);
+    --nav-item-link-hover: var(--color-white);
 
     --button-display: inline-block;
     --button-padding: 1.5rem 3rem;
